--- a/about.html
+++ b/about.html
@@ -17,7 +17,13 @@
         crossorigin="anonymous" />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <!-- Material Design Bootstrap -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.18.0/css/mdb.min.css" rel="stylesheet">
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.18.0/js/mdb.min.js"></script>
     <link rel="stylesheet" href="./style.css">
+
     <title>About Me</title>
 </head>
 
@@ -45,21 +51,21 @@
                         <div class="container">
                             <div class="row">
                                 <div class=" col-lg-6 mb-5">
-                                    <div class="card-top-radius miniCard ">
+                                    <div class="card-top-radius miniCard animated fadeIn">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Skills</h3>
                                             <h6 class="card-subtitle ">My knowledge</h6>
                                         </div>
                                         <div class="card-img-container d-flex justify-content-center ">
-                                            <img src="Assets/Images/rainbowbrain.png" class="card-img-top"
+                                            <img src="Assets/Images/rainbowbrain.png" class="card-img-top "
                                                 alt="screenshot">
                                         </div>
                                     </div>
-                                    <div id="skillsSection" class="card-body miniCard card-bottom-radius">
+                                    <div id="skillsSection" class="card-body miniCard card-bottom-radius animated fadeIn">
                                     </div>
                                 </div>
                                 <div class=" col-lg-6 mb-5">
-                                    <div class="card-top-radius miniCard">
+                                    <div class="card-top-radius miniCard delay-1s animated fadeIn">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Strengths</h3>
                                             <h6 class="card-subtitle ">My stats</h6>
@@ -69,19 +75,25 @@
                                                 alt="screenshot">
                                         </div>
                                     </div>
-                                    <div id="statsSection" class="card-body miniCard card-bottom-radius">
+                                    <div id="statsSection" class="card-body miniCard card-bottom-radius delay-1s animated fadeIn">
                                         <ul class="no-bullets">
-                                            <li class="py-2"><i class="fas fa-bolt fa-2x"></i><span class="px-3">learns quickly</span></li>
-                                            <li class="py-2"><i class="fas fa-users fa-2x"></i><span class="px-3">team player</span></li>
-                                            <li class="py-2"><i class="fas fa-code-branch fa-2x"></i><span class="px-3">incredibly driven</span></li>
-                                            <li class="py-2"><i class="fas fa-bug fa-2x"></i><span class="px-3">expert bug investigator & fixer</span></li>
-                                            <li class="py-2"><i class="fas fa-globe fa-2x"></i><span class="px-3">extremely flexible</span></li>
-                                            <li class="py-2"><i class="fas fa-briefcase fa-2x"></i><span class="px-3">doesn't give up until everything looks good</span></li>
+                                            <li class="py-2"><i class="fas fa-bolt fa-2x"></i><span class="px-3">learns
+                                                    quickly</span></li>
+                                            <li class="py-2"><i class="fas fa-users fa-2x"></i><span class="px-3">team
+                                                    player</span></li>
+                                            <li class="py-2"><i class="fas fa-code-branch fa-2x"></i><span
+                                                    class="px-3">incredibly driven</span></li>
+                                            <li class="py-2"><i class="fas fa-bug fa-2x"></i><span class="px-3">expert
+                                                    bug investigator & fixer</span></li>
+                                            <li class="py-2"><i class="fas fa-globe fa-2x"></i><span
+                                                    class="px-3">extremely flexible</span></li>
+                                            <li class="py-2"><i class="fas fa-briefcase fa-2x"></i><span
+                                                    class="px-3">doesn't give up until everything looks good</span></li>
                                         </ul>
                                     </div>
                                 </div>
                                 <div class=" col-lg-6 mb-5">
-                                    <div class="card-top-radius miniCard">
+                                    <div class="card-top-radius miniCard delay-2s animated fadeIn">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Personality</h3>
                                             <h6 class="card-subtitle ">What makes me special</h6>
@@ -91,28 +103,32 @@
                                                 alt="screenshot">
                                         </div>
                                     </div>
-                                    <div id="statsSection" class="card-body miniCard card-bottom-radius">
+                                    <div id="bitsSection" class="card-body miniCard card-bottom-radius delay-2s animated fadeIn">
                                         <ul class="no-bullets">
-                                            <li class="py-2"><i class="fas fa-heart fa-2x"></i><span class="px-3">L<span class="text-success font-weight-bold">G</span>BT</span></li>
-                                            <li class="py-2"><i class="fas fa-leaf fa-2x"></i><span class="px-3">longtime vegan</span></li>
-                                            <li class="py-2"><i class="fas fa-cat fa-2x"></i><span class="px-3">cat <span class="badge badge-light">2</span> herder</span></li>
-                                            <li class="py-2"><i class="fas fa-running fa-2x"></i><span class="px-3">extremely flexible</span></li>
-                                            <li class="py-2"><i class="fas fa-dice-five fa-2x"></i><span class="px-3">board game fanatic</span></li>
+                                            <li class="py-2"><i class="fas fa-heart fa-2x"></i><span class="px-3">L<span
+                                                        class="text-success font-weight-bold">G</span>BT</span></li>
+                                            <li class="py-2"><i class="fas fa-leaf fa-2x"></i><span
+                                                    class="px-3">longtime vegan</span></li>
+                                            <li class="py-2"><i class="fas fa-cat fa-2x"></i><span class="px-3">cat
+                                                    <span class="badge badge-light">2</span> herder</span></li>
+                                            <li class="py-2"><i class="fas fa-running fa-2x"></i><span
+                                                    class="px-3">extremely flexible</span></li>
+                                            <li class="py-2"><i class="fas fa-dice-five fa-2x"></i><span
+                                                    class="px-3">board game fanatic</span></li>
                                         </ul>
                                     </div>
                                 </div>
                                 <div class=" col-lg-6 mb-5">
-                                    <div class="card-top-radius miniCard">
+                                    <div class="card-top-radius miniCard delay-3s animated fadeIn">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Contact</h3>
                                             <h6 class="card-subtitle ">How to get in touch with me</h6>
                                         </div>
                                         <div class="card-img-container d-flex justify-content-center ">
-                                            <img src="Assets/Images/portrait.jpg" class="card-img-top"
-                                                alt="screenshot">
+                                            <img src="Assets/Images/portrait.jpg" class="card-img-top" alt="screenshot">
                                         </div>
                                     </div>
-                                    <div id="statsSection" class="card-body miniCard card-bottom-radius">
+                                    <div id="statsSection" class="card-body miniCard card-bottom-radius delay-3s animated fadeIn">
                                         <div class="mt-3 ">
                                             <ul class="nav">
                                                 <li class="nav-item">
@@ -126,7 +142,8 @@
                                                         Me</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a href="tel:619-564-1623" class="nav-link"><i class="fas fa-phone "></i> Call
+                                                    <a href="tel:619-564-1623" class="nav-link"><i
+                                                            class="fas fa-phone "></i> Call
                                                         Me</a>
                                                 </li>
                                             </ul>
@@ -173,79 +190,106 @@ $(document).ready(function () {
 var skills = [
     {
         skill: "HTML5",
-        level: 5
+        level: 5,
+        id: "skillHTML5"
     },
     {
         skill: "CSS",
-        level: 5
+        level: 5,
+        id: "skillCSS"
     },
     {
         skill: "Javascript",
-        level: 5
+        level: 5,
+        id: "skillJS"
     },
     {
         skill: "Bootstrap",
-        level: 3
+        level: 3,
+        id: "skillBootstrap"
     },
     {
         skill: "Foundation",
-        level: 3
+        level: 3,
+        id: "skillFoundation"
     },
     {
         skill: "JQuery",
-        level: 5
+        level: 5,
+        id: "skillJQuery"
     },
     {
         skill: "ES6",
-        level: 3
+        level: 3,
+        id: "skillES6"
     },
     {
         skill: "Java",
-        level: 4
+        level: 4,
+        id: "skillJava"
     },
     {
         skill: "Caché",
-        level: 4
+        level: 4,
+        id: "skillCaché"
     },
     {
         skill: "VB6",
-        level: 3
+        level: 3,
+        id: "skillVB6"
     },
     {
         skill: "C#",
-        level: 3
+        level: 3,
+        id: "skillCSharp"
     },
     {
         skill: "Node.js",
-        level: 2
+        level: 2,
+        id: "skillNode"
     },
     {
         skill: "React.js",
-        level: 1
+        level: 1,
+        id: "skillReact"
     },
     {
         skill: "Vue.js",
-        level: 2
+        level: 2,
+        id: "skillVue"
     },
     {
         skill: "Python",
-        level: 1
+        level: 1,
+        id: "skillPython"
     },
     {
         skill: "GDScript",
-        level: 4
+        level: 4,
+        id: "skillGDScript"
     },
     {
         skill: "C++",
-        level: 1
+        level: 1,
+        id: "skillCplusplus"
     }
 ]
 
+let skillIndex = -1;
+let skillTimer;
 function populateSkills() {
     $.each(skills,(index,value) => {
-        let spanSkill = $("<span>").addClass("mx-1 my-1 btn btn-bg-" + index%7).text(value.skill);
+        let spanSkill = $("<span>").addClass("invisible mx-1 my-1 btn btn-bg-" + index%7).text(value.skill).attr("id",value.id);
         $("#skillsSection").append(spanSkill);
     });
+    
+    skillTimer = setInterval(() => {
+        skillIndex++;
+        if (skillIndex >= skills.length) clearInterval(skillTimer);
+        let value = skills[skillIndex];
+        let spanSkill = $("#" + value.id).removeClass("invisible").addClass(" animated fadeIn");
+
+    }, 500);
 }
 populateSkills();
 
