--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" integrity=""
         crossorigin="anonymous" />
+    <!-- Material Design Bootstrap -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.18.0/css/mdb.min.css" rel="stylesheet">
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.18.0/js/mdb.min.js"></script>
     <title>Portfolio</title>
 </head>
 
@@ -44,7 +49,7 @@
                             <div class="row">
 
                                 <div class=" col-lg-4 mb-5">
-                                    <div class="card-top-radius miniCard" style="transform: rotate(0)">
+                                    <div class="card-top-radius miniCard animated fadeIn" style="transform: rotate(0)">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Covid - Can I do it?</h3>
                                             <h6 class="card-subtitle ">Risk Assessment App</h6>
@@ -56,14 +61,14 @@
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="card-body miniCard card-bottom-radius" style="transform: rotate(0)"><a
+                                    <div class="card-body miniCard card-bottom-radius animated fadeIn" style="transform: rotate(0)"><a
                                             href="https://github.com/covidcanidoit/covidcanidoit"
                                             class=" stretched-link"><i
                                                 class="fab fa-github-square fa-3x align-middle"></i> View on Github</a></div>
                                 </div>
 
                                 <div class=" col-lg-4 mb-5">
-                                    <div class="card-top-radius miniCard" style="transform: rotate(0)">
+                                    <div class="card-top-radius miniCard delay-1s animated fadeIn" style="transform: rotate(0)">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Purple Pages</h3>
                                             <h6 class="card-subtitle ">Web Entertainment App</h6>
@@ -76,14 +81,14 @@
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="card-body card-bottom-radius miniCard" style="transform: rotate(0)"><a
+                                    <div class="card-body card-bottom-radius miniCard delay-1s animated fadeIn" style="transform: rotate(0)"><a
                                             href="https://github.com/reptile18/Purple-Pages"
                                             class=" stretched-link"><i
                                                 class="fab fa-github-square fa-3x align-middle"></i> View on Github</a></div>
                                 </div>
 
                                 <div class="col-lg-4 mb-5">
-                                    <div class="card-top-radius miniCard" style="transform: rotate(0)">
+                                    <div class="card-top-radius miniCard delay-2s animated fadeIn" style="transform: rotate(0)">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Work Day Scheduler</h3>
                                             <h6 class="card-subtitle ">Time Keeping App</h6>
@@ -96,14 +101,14 @@
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="card-body card-bottom-radius miniCard" style="transform: rotate(0)"><a
+                                    <div class="card-body card-bottom-radius miniCard delay-2s animated fadeIn" style="transform: rotate(0)"><a
                                             href="https://github.com/reptile18/Work-Day-Scheduler"
                                             class=" stretched-link"><i
                                                 class="fab fa-github-square fa-3x align-middle"></i> View on Github</a></div>
                                 </div>
 
                                 <div class="col-lg-4 mb-5">
-                                    <div class="card-top-radius miniCard" style="transform: rotate(0)">
+                                    <div class="card-top-radius miniCard delay-3s animated fadeIn" style="transform: rotate(0)">
                                         <div class=" p-4">
                                             <h3 class="card-title ">Weather Dashboard</h3>
                                             <h6 class="card-subtitle ">Local Weather App</h6>
@@ -115,7 +120,7 @@
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="card-body card-bottom-radius miniCard" style="transform: rotate(0)"><a
+                                    <div class="card-body card-bottom-radius miniCard delay-3s animated fadeIn" style="transform: rotate(0)"><a
                                             href="https://github.com/reptile18/Weather-Dashboard"
                                             class=" stretched-link"><i
                                                 class="fab fa-github-square fa-3x align-middle"></i> View on Github</a></div>
